--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "installCommand": "npm install",
+  "buildCommand": "cd sun-flight && npm install && npm run build",
+  "outputDirectory": "sun-flight/dist",
   "framework": "vite"
 } 
