--- a/sun-flight/package.json
+++ b/sun-flight/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "axios": "^1.10.0",
     "leaflet": "^1.9.4",
+    "luxon": "^3.4.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^4.12.0",
     "react-leaflet": "^5.0.0",
+    "react-select": "^5.8.0",
+    "react-window": "^1.8.8",
     "suncalc": "^1.9.0"
   },
   "devDependencies": {
