--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd sun-flight && npm install && npm run build",
-  "outputDirectory": "sun-flight/dist",
-  "framework": "vite"
+  "buildCommand": "npm install && npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "root": "sun-flight"
 } 
