--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 .vercel
+node_modules/
+sun-flight/node_modules/
+sun-flight/dist/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+*.log
