--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
-  "buildCommand": "npm install && npm run build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd sun-flight && npm install && npm run build",
+  "outputDirectory": "sun-flight/dist",
   "framework": "vite",
-  "root": "sun-flight"
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ]
 } 
